--- a/pom.xml
+++ b/pom.xml
@@ -34,19 +34,19 @@
 		<dependency>
 			<groupId>fr.paris.lutece</groupId>
 			<artifactId>lutece-core</artifactId>
-			<version>3.0.0-SNAPSHOT</version>
+			<version>[3.0.0,4.0.0-SNAPSHOT)</version>
 			<type>lutece-core</type>
 		</dependency>
 		<dependency>
 			<groupId>fr.paris.lutece.plugins</groupId>
 			<artifactId>plugin-comarquage</artifactId>
-			<version>2.0.8-SNAPSHOT</version>
+			<version>[2.0.6,3.0.0-SNAPSHOT)</version>
 			<type>lutece-plugin</type>
 		</dependency>
 		<dependency>
 			<groupId>fr.paris.lutece.plugins</groupId>
 			<artifactId>plugin-solr</artifactId>
-			<version>2.1.2-SNAPSHOT</version>
+			<version>[2.1.0,3.0.0-SNAPSHOT)</version>
 			<type>lutece-plugin</type>
 		</dependency>
 	</dependencies>
