--- a/pom.xml
+++ b/pom.xml
@@ -1,64 +1,59 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
-	<parent>
-	  <artifactId>lutece-plugins-pom</artifactId>
-	  <groupId>fr.paris.lutece.plugins</groupId>
-	  <version>3.7</version>
-	</parent>
-
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>fr.paris.lutece.plugins</groupId>
-	<artifactId>module-comarquage-solr</artifactId>
-	<packaging>lutece-plugin</packaging>
-	<version>1.0.1-SNAPSHOT</version>
-	<name>Module comarquage Solr</name>
-
-	<repositories>
-		<repository>
-		    <id>lutece</id>
-		    <name>luteceRepository</name>
-		    <url>http://dev.lutece.paris.fr/maven_repository</url>
-		    <layout>default</layout>
-	  	</repository>
-	  	<repository>
-	      	<id>luteceSnapshot</id>
-	        <name>luteceSnapshot</name>
-	        <url>http://dev.lutece.paris.fr/snapshot_repository</url>
-	       	<snapshots>
-	           	<enabled>true</enabled>
-	        </snapshots>
-    	</repository>
-	</repositories>
-
-	<dependencies>
-		<dependency>
-			<groupId>fr.paris.lutece</groupId>
-			<artifactId>lutece-core</artifactId>
-			<version>[3.0.0,)</version>
-			<type>lutece-core</type>
-		</dependency>
-		<dependency>
-			<groupId>fr.paris.lutece.plugins</groupId>
-			<artifactId>plugin-comarquage</artifactId>
-			<version>[2.0.6,3.0.0-SNAPSHOT)</version>
-			<type>lutece-plugin</type>
-		</dependency>
-		<dependency>
-			<groupId>fr.paris.lutece.plugins</groupId>
-			<artifactId>plugin-solr</artifactId>
-			<version>[2.1.0,3.0.0-SNAPSHOT)</version>
-			<type>lutece-plugin</type>
-		</dependency>
-	</dependencies>
-
-	<properties>
-		<componentName>Module Comarquage Solr</componentName>
-		<jiraProjectName>COMARQUAGESOLR</jiraProjectName>
-		<jiraComponentId>10520</jiraComponentId>
-	</properties>
+    <parent>
+        <artifactId>lutece-global-pom</artifactId>
+        <groupId>fr.paris.lutece.tools</groupId>
+        <version>3.0.12</version>
+    </parent>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>fr.paris.lutece.plugins</groupId>
+    <artifactId>module-comarquage-solr</artifactId>
+    <packaging>lutece-plugin</packaging>
+    <version>1.0.1-SNAPSHOT</version>
+    <name>Module comarquage Solr</name>
+    <repositories>
+        <repository>
+            <id>lutece</id>
+            <name>luteceRepository</name>
+            <url>http://dev.lutece.paris.fr/maven_repository</url>
+            <layout>default</layout>
+        </repository>
+        <repository>
+            <id>luteceSnapshot</id>
+            <name>luteceSnapshot</name>
+            <url>http://dev.lutece.paris.fr/snapshot_repository</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+    <dependencies>
+        <dependency>
+            <groupId>fr.paris.lutece</groupId>
+            <artifactId>lutece-core</artifactId>
+            <version>[3.0.0,)</version>
+            <type>lutece-core</type>
+        </dependency>
+        <dependency>
+            <groupId>fr.paris.lutece.plugins</groupId>
+            <artifactId>plugin-comarquage</artifactId>
+            <version>[2.0.6,3.0.0-SNAPSHOT)</version>
+            <type>lutece-plugin</type>
+        </dependency>
+        <dependency>
+            <groupId>fr.paris.lutece.plugins</groupId>
+            <artifactId>plugin-solr</artifactId>
+            <version>[2.1.0,3.0.0-SNAPSHOT)</version>
+            <type>lutece-plugin</type>
+        </dependency>
+    </dependencies>
+    <properties>
+        <componentName>Module Comarquage Solr</componentName>
+        <jiraProjectName>COMARQUAGESOLR</jiraProjectName>
+        <jiraComponentId>10520</jiraComponentId>
+    </properties>
     <scm>
-        <connection>scm:svn:http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/module-comarquage-solr</connection>
-        <developerConnection>scm:svn:https://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/module-comarquage-solr</developerConnection>
-        <url>http://dev.lutece.paris.fr/viewvc/lutece/portal/trunk/plugins/technical/module-comarquage-solr</url>
+        <connection>scm:git:https://github.com/lutece-platform/lutece-tech-module-comarquage-solr.git</connection>
+        <developerConnection>scm:git:https://github.com/lutece-platform/lutece-tech-module-comarquage-solr.git</developerConnection>
+        <url>https://github.com/lutece-platform/lutece-tech-module-comarquage-solr.git</url>
     </scm>
 </project>
